# Net-syncdisk

./: .gitattributes  目录说明.txt
Server/: G2652.sql  clear.sql  readme.txt
Server/src/: CMakeLists.txt
Server/src/common/: CMakeLists.txt  controller.cpp  json.hpp  listener.h  logger.cpp  logger.h  packets.cpp  packets.h  receiver.cpp  receiver.h  sender.cpp  tsock.h  utility.h
Server/src/server/: CMakeLists.txt  database.hpp  logger.cpp  logger.h  server.cpp
Ubuntu-Client/: readme.txt  tmyignore.txt  tmyuser.txt
Ubuntu-Client/src/: TMYClient.pro  __utility.h  clientmainthread.h  common.h  controller.cpp  dirscanner.h  json.hpp  localfilemanager.cpp  logger.cpp  logger.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainclient.cpp  net.h  packets.cpp  qlogger.h  receiver.cpp  receiverthread.cpp  senderthread.cpp  senderthread.h  tmy.h  treeviewmodel.cpp  treeviewmodel.h  tsock.cpp  tsock.h  utility.h
Ubuntu-Client/src/CMake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
Ubuntu-Client/src/CMake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  (+10 more)
Windows-Client/: readme.txt
Windows-Client/src/: TMYClient.pro.user.705d24f  TMYClient.pro.user.eab0873  clientmainthread.cpp  controller.cpp  controller.h  dirscanner.cpp  err.h  listener.cpp  localfilemanager.cpp  localfilemanager.h  main.cpp  mainclient.cpp  mainclient.h  mainclient.ui  packets.h  qlogger.cpp  receiverthread.cpp  receiverthread.h  sender.cpp  sender.h  senderthread.cpp  signupdialog.cpp  signupdialog.h  signupdialog.ui  utility.h
(+1168 files in other folders)
